<resources>
    <string name="app_name">EmployeeManagmentSystem</string>
    <string name="title_activity_employee_dashboard">EmployeeDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_apply_training">Apply Training</string>
    <string name="menu_applied_training">Applied Trainings</string>
    <string name="menu_apply_application">Apply Application</string>
    <string name="menu_applied_applications">Applied Applications</string>

    <string name="menu_training_applications">Training Applications</string>
    <string name="menu_leave_applications">Leave Applications</string>
    <string name="title_activity_principal_dashboard">ActivityPrincipalDashboard</string>
    <string name="menu_logout">Logout</string>
    <string name="add_user_details">Add User Details</string>
    <string name="menu_verify_user">Verify User</string>
    <string name="user_details">Profile</string>
    <string name="menu_user_details">User Details</string>
    <string name="menu_all_employees">All Employees</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="menu_edit_user_details">Edit Details</string>
    <string name="menu_apply_traning">Apply Training</string>
    <string name="menu_dsr">DeadStock Register</string>
    <string name="menu_central_store_dsr">Central Store DSR</string>
    <string name="welcome_to_dead_stock_register">Welcome To DeadStock Register</string>
    <string name="look_out_the_inventories_of_institute">Look out the Inventories of Institute</string>
    <string name="select_dsr">Select DSR</string>
    <string name="departments_dsr">Departments DSR</string>
</resources>