<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addUserDetailsFragment"
            app:destination="@id/addUserDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_apply_training"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.apply_training.ApplyTrainingFragment"
        android:label="@string/menu_apply_training"
        tools:layout="@layout/fragment_apply_training" />

    <fragment
        android:id="@+id/nav_applied_trainings"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.applied_trainings.AppliedTrainingFragment"
        android:label="@string/menu_applied_training"
        tools:layout="@layout/fragment_applied_trainings" >
        <action
            android:id="@+id/action_nav_applied_trainings_to_trainingCompletionFragment"
            app:destination="@id/trainingCompletionFragment" />
    </fragment>

    <fragment
        android:id="@+id/trainingCompletionFragment"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.training_completion.TrainingCompletionFragment"
        android:label="Training Details"
        tools:layout="@layout/fragment_training_completion" >
        <argument
            android:name="training"
            app:argType="com.android.employeemanagmentsystem.data.models.responses.Training" />
    </fragment>
    <fragment
        android:id="@+id/nav_add_completed_trainings"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.completed_trainings.CompletedTrainingsFragment"
        android:label="Add Completed Training"
        tools:layout="@layout/fragment_add_completed_training" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.android.employeemanagmentsystem.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />

    <fragment
        android:id="@+id/nav_apply_application"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.apply_io_applications.ApplyIOApplicationsFragment"
        android:label="@string/menu_apply_application"
        tools:layout="@layout/fragment_io_apply_applications" >
        <action
            android:id="@+id/action_nav_apply_application_to_appliedIoApplicationsFragment"
            app:destination="@id/nav_applied_applications" />
    </fragment>

    <fragment
        android:id="@+id/ioApplicationDetails"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.application_details.IoApplicationDetails"
        android:label="Io Application"
        tools:layout="@layout/fragment_io_application_details" >
        <argument
            android:name="Application"
            app:argType="com.android.employeemanagmentsystem.data.models.responses.Application" />
    </fragment>

    <fragment
        android:id="@+id/nav_applied_applications"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.applied_applications.AppliedIoApplicationsFragment"
        android:label="@string/menu_applied_applications"
        tools:layout="@layout/fragment_applied_applications" >
        <action
            android:id="@+id/action_nav_applied_applications_to_ioApplicationDetails"
            app:destination="@id/ioApplicationDetails" />
    </fragment>

    <fragment
        android:id="@+id/addUserDetailsFragment"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.add_user_details.AddUserDetailsFragment"
        android:label="@string/add_user_details"
        tools:layout="@layout/fragment_add_user_details" />
    <fragment
        android:id="@+id/nav_edit_details"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.edit_user_details.EditDetailsFragment"
        android:label="@string/edit_user_details"
        tools:layout="@layout/fragment_edit_user_details" />
    <fragment
        android:id="@+id/nav_user_details"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.user_details.UserDetailsFragment"
        android:label="@string/user_details"
        tools:layout="@layout/fragment_user_details">
        <action
            android:id="@+id/action_nav_userDetailsFragment_to_addUserDetailsFragment"
            app:destination="@id/addUserDetailsFragment" />
    </fragment>
</navigation>