<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_gravity="center"
        android:text="@string/welcome_to_dead_stock_register"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="70dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="#082e99" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/look_out_the_inventories_of_institute"
        android:textAlignment="center"
        android:textSize="23sp"
        android:textColor="@color/black"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/select_dsr"
        />


</LinearLayout>

