<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_addUserDetailsFragment"
            app:destination="@id/addUserDetailsFragment" />

    </fragment>


    <fragment
        android:id="@+id/nav_training_applications"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.training_applications.TrainingApplicationsFragment"
        android:label="@string/menu_training_applications"
        tools:layout="@layout/fragment_training_applications">
        <action
            android:id="@+id/action_nav_training_applications_to_applicationDetails"
            app:destination="@id/applicationDetails" />
    </fragment>

    <fragment
        android:id="@+id/nav_leave_applications"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.leave_applications.LeaveApplicationsFragment"
        android:label="@string/menu_leave_applications"
        tools:layout="@layout/fragment_leave_applications" />
    <fragment
        android:id="@+id/applicationDetails"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.application_details.TrainingApplicationDetails"
        android:label="Application Details"
        tools:layout="@layout/fragment_training_details">
        <argument
            android:name="training"
            app:argType="com.android.employeemanagmentsystem.data.models.responses.Training" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.android.employeemanagmentsystem.ui.logout.LogoutFragment"
        android:label="@string/menu_logout"
        tools:layout="@layout/fragment_logout" />


    <fragment
        android:id="@+id/ioApplicationDetails"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.application_details.IoApplicationDetails"
        android:label="Io Application"
        tools:layout="@layout/fragment_io_application_details">
        <argument
            android:name="Application"
            app:argType="com.android.employeemanagmentsystem.data.models.responses.Application" />
    </fragment>

    <fragment
        android:id="@+id/nav_applied_applications"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.applied_applications.AppliedIoApplicationsFragment"
        android:label="@string/menu_applied_applications"
        tools:layout="@layout/fragment_applied_applications">
        <action
            android:id="@+id/action_nav_applied_applications_to_ioApplicationDetails"
            app:destination="@id/ioApplicationDetails" />
    </fragment>
    <fragment
        android:id="@+id/nav_apply_application"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.apply_io_applications.ApplyIOApplicationsFragment"
        android:label="@string/menu_apply_application"
        tools:layout="@layout/fragment_io_apply_applications" />

    <fragment
        android:id="@+id/nav_verify_user"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.verify_user.VerifyUserFragment"
        android:label="@string/menu_verify_user"
        tools:layout="@layout/fragment_verify_user" />

    <fragment
        android:id="@+id/nav_all_employees"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.all_employees.AllEmployeesFragment"
        android:label="@string/menu_all_employees"
        tools:layout="@layout/fragment_all_employees" />


    <fragment
        android:id="@+id/addUserDetailsFragment"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.add_user_details.AddUserDetailsFragment"
        android:label="@string/add_user_details"
        tools:layout="@layout/fragment_add_user_details" />
    <fragment
        android:id="@+id/nav_edit_details"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.edit_user_details.EditDetailsFragment"
        android:label="@string/edit_user_details"
        tools:layout="@layout/fragment_edit_user_details" />
    <fragment
        android:id="@+id/nav_user_details"
        android:name="com.android.employeemanagmentsystem.ui.employee_dashboard.ui.user_details.UserDetailsFragment"
        android:label="@string/user_details"
        tools:layout="@layout/fragment_user_details">
        <action
            android:id="@+id/action_nav_userDetailsFragment_to_addUserDetailsFragment"
            app:destination="@id/addUserDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_apply_training"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.apply_training.ApplyTrainingFragment"
        android:label="Apply Training" />

    <fragment
        android:id="@+id/nav_central_store_dsr"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr.CsDSR"
        android:label="@string/menu_central_store_dsr"
        tools:layout="@layout/activity_cs_dsr">
        <action
            android:id="@+id/action_nav_central_store_dsr_to_nav_dsr"
            app:destination="@+id/nav_dsr"
            app:popUpTo="@id/nav_dsr" />
        <action
            android:id="@+id/action_nav_central_store_dsr_to_distributeItems"
            app:destination="@id/distributeItems" />
        <argument
            android:name="CsDSR"
            app:argType="integer" />
        <action
            android:id="@+id/action_nav_central_store_dsr_to_addProduct"
            app:destination="@id/addProduct" />
        <action
            android:id="@+id/action_nav_central_store_dsr_to_distrDetails2"
            app:destination="@id/distrDetails2" />
    </fragment>

    <fragment
        android:id="@+id/nav_dsr"
        app:startDestination="@+id/nav_dsr"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr.Dsr"
        android:label="@string/menu_dsr"
        tools:layout="@layout/activity_dsr">
        <action
            android:id="@+id/action_nav_dsr_to_nav_central_store_dsr"
            app:destination="@id/nav_central_store_dsr"
            app:popUpTo="@id/nav_dsr"
            app:popUpToInclusive="true"
            />
        <!--        <action-->
        <!--            android:id="@+id/action_nav_dsr_to_departments"-->
        <!--            app:destination="@id/departments" />-->
        <action
            android:id="@+id/action_nav_dsr_to_hostels"
            app:destination="@id/hostels"
            app:popUpTo="@id/nav_dsr"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_nav_dsr_to_library"
            app:destination="@id/library"
            app:popUpTo="@id/nav_dsr"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_nav_dsr_to_office"
            app:destination="@id/office"
            app:popUpTo="@id/nav_dsr"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_nav_dsr_to_departments2"
            app:destination="@id/departments2"
            app:popUpTo="@id/nav_dsr"
            app:popUpToInclusive="true"/>

    </fragment>

    <fragment
        android:id="@+id/distributeItems"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.DistributeItems"
        android:label="Distribute Products"
        tools:layout="@layout/fragment_distribute_items" />
    <!--    <fragment-->
    <!--        android:id="@+id/departments"-->
    <!--        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.Departments"-->
    <!--        android:label="Departments"-->
    <!--        tools:layout="@layout/fragment_departments" >-->
    <!--        <argument-->
    <!--            android:name="Departments"-->
    <!--            app:argType="integer" />-->
    <!--    </fragment>-->
    <fragment
        android:id="@+id/hostels"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.Hostels"
        android:label="Hostels"
        tools:layout="@layout/fragment_hostels" >
        <argument
            android:name="Hostels"
            app:argType="integer" />
        <action
            android:id="@+id/action_hostels_to_transferHostels"
            app:destination="@id/transferHostels" />
        <action
            android:id="@+id/action_hostels_to_reqHostels"
            app:destination="@id/reqHostels" />
    </fragment>
    <fragment
        android:id="@+id/library"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.Library"
        android:label="Library"
        tools:layout="@layout/fragment_library" >
        <argument
            android:name="Library"
            app:argType="integer" />
        <action
            android:id="@+id/action_library_to_transferLibrary"
            app:destination="@id/transferLibrary" />
        <action
            android:id="@+id/action_library_to_reqLibrary"
            app:destination="@id/reqLibrary" />
    </fragment>
    <fragment
        android:id="@+id/office"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.Office"
        android:label="Office"
        tools:layout="@layout/fragment_office">
        <argument
            android:name="Office"
            app:argType="integer" />
        <action
            android:id="@+id/action_office_to_transferOffice"
            app:destination="@id/transferOffice" />
        <action
            android:id="@+id/action_office_to_reqOffice"
            app:destination="@id/reqOffice" />
    </fragment>
    <fragment
        android:id="@+id/departments2"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.Departments"
        android:label="Departments"
        tools:layout="@layout/fragment_departments" >
        <argument
            android:name="departments"
            app:argType="integer" />
        <action
            android:id="@+id/action_departments2_to_transferDept"
            app:destination="@id/transferDept" />
        <action
            android:id="@+id/action_departments2_to_reqDept"
            app:destination="@id/reqDept" />
    </fragment>
    <fragment
        android:id="@+id/addProduct"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.AddProduct"
        android:label="Add Products"
        tools:layout="@layout/fragment_add_product" />
    <fragment
        android:id="@+id/distrDetails2"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.DistrDetails"
        android:label="Distribution Details"
        tools:layout="@layout/fragment_distr_details" />
    <fragment
        android:id="@+id/transferDept"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.TransferDept"
        android:label="fragment_transfer_dept"
        tools:layout="@layout/fragment_transfer_dept" />
    <fragment
        android:id="@+id/transferHostels"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.TransferHostels"
        android:label="fragment_transfer_hostels"
        tools:layout="@layout/fragment_transfer_hostels" />
    <fragment
        android:id="@+id/transferLibrary"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.TransferLibrary"
        android:label="fragment_transfer_library"
        tools:layout="@layout/fragment_transfer_library" />
    <fragment
        android:id="@+id/transferOffice"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.TransferOffice"
        android:label="fragment_transfer_office"
        tools:layout="@layout/fragment_transfer_office" />
    <fragment
        android:id="@+id/reqDept"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.ReqDept"
        android:label="Send Request"
        tools:layout="@layout/fragment_req_dept" />
    <fragment
        android:id="@+id/reqHostels"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.ReqHostels"
        android:label="Send Request"
        tools:layout="@layout/fragment_req_hostels" />
    <fragment
        android:id="@+id/reqLibrary"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.ReqLibrary"
        android:label="Send Request"
        tools:layout="@layout/fragment_req_library" />
    <fragment
        android:id="@+id/reqOffice"
        android:name="com.android.employeemanagmentsystem.ui.admin_dashboard.ui.dsr_details.ReqOffice"
        android:label="Send Request"
        tools:layout="@layout/fragment_req_office" />



</navigation>